# oop_exercise_02

./: CMakeLists.txt  lab2.aux  lab2.tex  main.cpp  modulo.cpp  modulo.hpp  test.cpp
